--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
      </nav>
      <!-- end of navbar -->
 
+     <!-- /////////////////////////////////////////////////////////////////// -->
+
+     <!-- banner -->
+     <section>
+         <div class="container-fluid">
+             <div class="row bg-info justify-content-center align-items-center" style="height: 100vh">
+                <div class="col-sm-10 text-center">
+                    <h1 class="display-2 ttext-capitalize"><span class="text-warning">Learning Bootstrap</span><span class="text-white font-weight-bold"> Hristijan Gjorgjioski</span></h1>
+                    <h2 class="font-weight-light font-italic text-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, ea. Itaque, officiis, vero quos dolorum enimtaque neque.</h2>
+                    <a href="#" class="btn btn-warning btn-lg px-4 m-3">Press Here</a>
+                    <a href="#" class="btn btn-danger btn-lg px-4 m-3">Press Here</a>
+                </div>
+             </div>
+         </div>
+     </section>
+
+     <!-- end of bannder -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
