added 'projects' section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,44 @@
             </div>
         </div>
     </section>
-     <!-- end of skills -->
+    <!-- end of skills -->
+
+    <!-- project -->
+    <section class="p-5">
+        <div class="container-fluid">
+            <!-- title -->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="text-warning display-2">Projects</h1>
+                    <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis similique iusto harum?</p>
+                </div>
+            </div>
+            <!-- end of title -->
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/project1.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project One</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, reprehenderit.</p>
+                </div>
+                <div class="col-lg-3 mt-3 col-sm-6">
+                    <img src="images/project2.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Two</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, reprehenderit.</p>
+                </div>
+                <div class="col-lg-3 mt-4 col-sm-6">
+                    <img src="images/project3.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Three</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, reprehenderit.</p>
+                </div>
+                <div class="col-lg-3 mt-5 col-sm-6">
+                    <img src="images/project4.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Project Four</h2>
+                    <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, reprehenderit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end ofproject -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
